Fix backdrop on safari

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -187,6 +187,14 @@
   --space-15px: 0.938rem;  
 }
 
+/*
+ * backdrop psudeo element doesn't inherit css variables on Safari
+ * https://bugs.webkit.org/show_bug.cgi?id=263834
+ */
+::backdrop {
+  --modal-background-color: #000000BF;
+}
+
 *, *::before, *::after {
   box-sizing: border-box;
   outline: none;
